--- a/rails_generators/shoulda_scaffold/templates/haml/index.html.haml
+++ b/rails_generators/shoulda_scaffold/templates/haml/index.html.haml
@@ -1,4 +1,4 @@
-%h1 Listing <%= plural_name %>
+%h1 Listing <%= plural_name.humanize %>
 
 %table
   %tr
@@ -15,4 +15,4 @@
       %td= link_to 'Edit', edit_<%= singular_name %>_path(<%= singular_name %>)
       %td= link_to 'Destroy', <%= singular_name %>, :confirm => 'Are you sure?', :method => :delete
 
-%p= link_to 'New <%= singular_name %>', new_<%= singular_name %>_path
+%p= link_to 'New <%= singular_name %>', new_<%= singular_name.humanize %>_path
